--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -62,7 +62,7 @@
         border: solid;
         margin: 5px;
     }
-    .projectbox{
+    .contentbox{
     width: 350px;
     height: auto;
     background-color: #5994ce;
@@ -91,33 +91,43 @@
                     <div class="box bg-light  mb-5 shadow" >
                         <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
                             <div lang="ja">
-                                <div class="wrapbox auto projectbox">
+                                <div class="wrapbox auto contentbox">
                                     <b>1. Algorithms and Flowcharts </b><hr>
                                     <div>
-                                    <a href="/course-Algorithms_and_Flowcharts-pretest">แบบทดสอบก่อนเรียน</a>
-                                    
-                                    <hr>
-                                    <a href="/course-Algorithms_and_Flowcharts">เนื้อหาบทเรียน: <%= Pre1 %></a><br>
-                                    <a href="/course-Algorithms_and_Flowcharts#Knowledge" class="scrollbtnK"  type="button">K</a>
-                                    <a href="/course-Algorithms_and_Flowcharts#Tracing" class="scrollbtnT"  type="button">T</a>
-                                    <a href="/course-Algorithms_and_Flowcharts#Explaining" class="scrollbtnE"  type="button">E</a>
-                                    <a href="/course-Algorithms_and_Flowcharts#Writing" class="scrollbtnW" type="button">W</a>
-                                    <hr>
-                                    <a href="/course-Algorithms_and_Flowcharts-quiz">แบบทดสอบหลังเรียน</a>
+                                        <a href="/course-Algorithms_and_Flowcharts-pretest">แบบทดสอบก่อนเรียน</a><hr>
+                                        <p>เนื้อหาบทเรียน</p>
+                                        <% if(Pre1done >= 1 ){ %>
+                                            <button><a href="/course-Algorithms_and_Flowcharts">เนื้อหาปลดล็อคแล้ว <br>เข้าดูได้เลย!</a></button><br>
+                                            <a href="/course-Algorithms_and_Flowcharts#Knowledge" class="scrollbtnK"  type="button">K</a>
+                                            <a href="/course-Algorithms_and_Flowcharts#Tracing" class="scrollbtnT"  type="button">T</a>
+                                            <a href="/course-Algorithms_and_Flowcharts#Explaining" class="scrollbtnE"  type="button">E</a>
+                                            <a href="/course-Algorithms_and_Flowcharts#Writing" class="scrollbtnW" type="button">W</a>
+                                            <hr>
+                                            <a href="/course-Algorithms_and_Flowcharts-quiz">แบบทดสอบหลังเรียน</a>
+                                        <% } else{ %> 
+                                            <p>ต้องทำแบบทดสอบก่อนเรียนก่อน</p>
+                                        <% } %>
                                     </div>
                                     
                                 </div>
-                                <p class="wrapbox auto">
-                                    <b>2. Datatype and Variable </b>
-                                    <br><a href="/course-Datatype_and_Variable-pretest">แบบทดสอบก่อนเรียน</a>
-                                    <br><a href="/course-Datatype_and_Variable">เนื้อหาบทเรียน</a>
-                                    <br><a href="/course-Datatype_and_Variable-quiz">แบบทดสอบหลังเรียน</a>
-                                    <br>
-                                    <a href="/course-Datatype_and_Variable#Knowledge" class="scrollbtnK"  type="button">K</a>
-                                    <a href="/course-Datatype_and_Variable#Tracing" class="scrollbtnT"  type="button">T</a>
-                                    <a href="/course-Datatype_and_Variable#Explaining" class="scrollbtnE"  type="button">E</a>
-                                    <a href="/course-Datatype_and_Variable#Writing" class="scrollbtnW" type="button">W</a>
-                                 </p>   
+                                <div class="wrapbox auto contentbox">
+                                    <b>2. Datatype and Variable </b><hr>
+                                    <div>
+                                        <a href="/course-Datatype_and_Variable-pretest">แบบทดสอบก่อนเรียน</a><hr>
+                                        <p>เนื้อหาบทเรียน</p>
+                                        <% if(Pre2done >= 1 ){ %>
+                                            <button><a href="/course-Datatype_and_Variable">เนื้อหาปลดล็อคแล้ว <br>เข้าดูได้เลย!</a></button><br>
+                                            <a href="/course-Datatype_and_Variable#Knowledge" class="scrollbtnK"  type="button">K</a>
+                                            <a href="/course-Datatype_and_Variable#Tracing" class="scrollbtnT"  type="button">T</a>
+                                            <a href="/course-Datatype_and_Variable#Explaining" class="scrollbtnE"  type="button">E</a>
+                                            <a href="/course-Datatype_and_Variable#Writing" class="scrollbtnW" type="button">W</a>
+                                            <hr>
+                                            <a href="/course-Datatype_and_Variable-quiz">แบบทดสอบหลังเรียน</a>
+                                        <% } else{ %> 
+                                            <p>ต้องทำแบบทดสอบก่อนเรียนก่อน</p>
+                                        <% } %>
+                                    </div>
+                                </div>   
                                     <p class="wrapbox auto">
                                     <b>3. Input and Output</b>
                                     <br><a href="/course-Input_and_Output-pretest">แบบทดสอบก่อนเรียน</a>
