--- a/views/index/index_viewer.ejs
+++ b/views/index/index_viewer.ejs
@@ -43,7 +43,7 @@
   <button class="button" onclick="document.location='/auth/login';">Get Started</button>
 </div>
 
-<img id="bg" src="https://img.freepik.com/free-photo/business-network-background-connecting-dots-technology-design_53876-160283.jpg?t=st=1716092367~exp=1716095967~hmac=7cf64c52b741382dd5392378b178a1458c50b712d6337c3a9038939dc32be705&w=2000">
+<img id="bg" src="images/bg.jpg">
 <img id="moon" src="https://img.freepik.com/free-psd/3d-nft-icon-developer-male-illustration_629802-6.jpg?t=st=1712830382~exp=1712833982~hmac=d33182ac3e551ce030e81cea1feedf41b95303d997536c7d534fa4931e6495a4&w=1480">
 
 <section class="sticky">
@@ -69,7 +69,7 @@
         <br>
       </div>
     </div>
-    
+    <br>
     <div class="row app-align-center" style="height: 300px;">
       <div class="col-sm-6">
         <h6 class="text-muted text-uppercase">What is GeekCodeCraft?</h6>
@@ -82,7 +82,8 @@
       </div>
     </div>
   </div>
-</div>
+</div><br>
+
 
 
 <%- include('../layouts/footer') %>
