--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -94,7 +94,7 @@
                                     <b>1. Algorithms and Flowcharts </b><hr>
                                     <div>
                                         <a href="/course-Algorithms_and_Flowcharts-pretest">แบบทดสอบก่อนเรียน</a>
-                                        <p><%= pre1LV1 %></p>
+                                        <p style="background-color: #d7ebff;">คะแนน <br> Knowledge: <%= pre1LV1 %><br>Tracing: <%= pre1LV1 %> <br>Explaining: <%= pre1LV1 %> <br>Writing: <%= pre1LV1 %></p>
                                         <hr>
                                         <p>เนื้อหาบทเรียน</p>
                                         <% if(pre1done >= 1 ){ %>
@@ -105,7 +105,8 @@
                                             <a href="/course-Algorithms_and_Flowcharts#Explaining" class="scrollbtnE"  type="button">E</a>
                                             <a href="/course-Algorithms_and_Flowcharts#Writing" class="scrollbtnW" type="button">W</a>
                                             <hr>
-                                            <a href="/course-Algorithms_and_Flowcharts-quiz">แบบทดสอบหลังเรียน <%= post1LV1 %></a>
+                                            <a href="/course-Algorithms_and_Flowcharts-quiz">แบบทดสอบหลังเรียน</a>
+                                            <p><%= post1LV1 %></p>
                                         <% } else{ %> 
                                             <p>ต้องทำแบบทดสอบก่อนเรียนก่อน</p>
                                         <% } %>
