--- a/public/stylesheets/gamequiz.css
+++ b/public/stylesheets/gamequiz.css
@@ -1,7 +1,7 @@
 .scrollbtnK {
     height: 50px;
     width: 150px;
-    background-color: #eaec73;
+    background-color: #ffb26f;
     color: #000000;
     padding-top: 10px;
     border-radius: 10px;
