--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -177,9 +177,9 @@
                             <b>Project Quiz 3 ปลดล็อกแล้ว!</b>
                             <p>คลิก<a href="/project"> Project </a>เพื่อดูเพิ่มเติม</p>
                         <% }%>
-                        <p>Project Quiz 1 : <%= PrjQuiz1 %></p>
-                        <p>Project Quiz 2 : <%= PrjQuiz2 %></p>
-                        <p>Project Quiz 3 : <%= PrjQuiz3 %></p>
+                        <p>Project Quiz 1 : <%= PrjQuiz1Score %></p>
+                        <p>Project Quiz 2 : <%= PrjQuiz2Score %></p>
+                        <p>Project Quiz 3 : <%= PrjQuiz3Score %></p>
                     </div>
                     <div  class="group2">
                         <div>
