course : lab unlock

--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -160,7 +160,7 @@
                     <div class="boxbax">
                         <p>Progress</p>
                         <div class="progress">
-                            <progress class="progress" value="50" style="margin-right: 5px;" max="100"></progress>
+                            <progress class="progress" value="<%= TicketBooking_SystemPercent %>" style="margin-right: 5px;" max="100"></progress>
                             <b><%= TicketBooking_SystemPercent %>%</b>
                         </div> <hr>
 
