--- a/public/stylesheets/home1.css
+++ b/public/stylesheets/home1.css
@@ -61,7 +61,7 @@ button.btn-secondary {
 .btn1 {
     padding: 5px;
     color: #ffffff;
-    background-color: #b957ce;
+    background-color: #e08655;
     border-radius: 3px;
     border: solid #444444;
 }
