--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -96,7 +96,7 @@
   .button:hover {
     color: #ffb3fc;
     border: solid #fb6ff6;
-    box-shadow: 0 0 10px 5px #fb6ff6;
+    box-shadow: 0 0 10px 5px #fc0ff5;
   }
 </style>
 
