--- a/views/student/layouts/project-middle.ejs
+++ b/views/student/layouts/project-middle.ejs
@@ -30,11 +30,13 @@
     border-radius: 10px;
   }
   .button {
-    color: #fff;
+    color: #000000;
     background-color: #b957ce;
+    border: solid #000000;
   }
   .button:hover {
-    color: #38fbdb;
+    color: #ffb3fc;
+    border: solid #fb6ff6;
     box-shadow: 0 0 15px 5px #fc0ff5;
   }
 </style>
