--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -74,7 +74,7 @@
                             </button>
                             <% } else{ %>  
                             <b>คลิกเพื่อเข้าร่วม Class</b><br>
-                            <button type="button" class="btn btn-outline-dark btn-sm" data-bs-toggle="modal" data-bs-target="#Classjoin" style="background-color: #ffffff; " >
+                            <button type="button" class="btn btn-outline-dark btn-sm" data-bs-toggle="modal" data-bs-target="#Classjoin" style="background-color: #ffffff;" >
                                 <svg width="17.5" height="20" style="font-size: 20px;;align-items: center;" viewBox="0 0 448 512">
                                 <path d="M432 256c0 17.69-14.33 32.01-32 32.01H256v144c0 17.69-14.33 31.99-32 31.99s-32-14.3-32-31.99v-144H48c-17.67 0-32-14.32-32-32.01s14.33-31.99 32-31.99H192v-144c0-17.69 14.33-32.01 32-32.01s32 14.32 32 32.01v144h144C417.7 224 432 238.3 432 256z"/>
                                 </svg><b> Join Class</b>
@@ -162,7 +162,9 @@
                         <div class="progress">
                             <progress class="progress" value="<%= TicketBooking_SystemPercent %>" style="margin-right: 5px;" max="100"></progress>
                             <b><%= TicketBooking_SystemPercent %>%</b>
-                        </div> <hr>
+                        </div> 
+                        <b style="font-size: 14px;">ความคืบหน้าในการทำแบบทดสอบเพื่อปลดล็อค Project Quiz</b>
+                        <hr>
 
                         <img style="width: 20px;" src="https://cdn-icons-png.flaticon.com/512/4213/4213459.png " alt="">
                         <% if (TicketBooking_SystemPercent === 50) { %>
@@ -190,7 +192,7 @@
                                     <p>Pre-test</p>
                                     <div class="row mb-3 ">
                                         <div class="col-sm-10 " style="top:10px">
-                                            <b style="font-size: 12px;">Basic: <%= PreBasicPercent %> /40</b>
+                                            <b style="font-size: 12px;">Knowledge: <%= PreBasicPercent %> /40</b>
                                             <progress class="progress" max="40" value=<%= PreBasicPercent %>  </progress>
                                         </div>
                                     </div>
@@ -213,7 +215,7 @@
                                     <p>Post-test</p>
                                     <div class="row mb-3 ">
                                         <div class="col-sm-10 " style="top:10px">
-                                            <b style="font-size: 12px;">Basic: <%= BasicPercent %> /40</b>
+                                            <b style="font-size: 12px;">Knowledge: <%= BasicPercent %> /40</b>
                                             <progress class="progress" max="40" value=<%= BasicPercent %>  </progress>
                                         </div>
                                     </div>
