--- a/public/stylesheets/home1.css
+++ b/public/stylesheets/home1.css
@@ -13,7 +13,7 @@
 
 .item1 {
     height: 140px;
-    background-color: #5994ce;
+    background-color: #fff;
     padding: 10px;
     width: 400px; 
     border-radius: 5px;
@@ -23,7 +23,7 @@
 }
 .item2 {
     height: 160px;
-    background-color: #5994ce;
+    background-color: #fff;
     padding: 10px;
     width: auto;
 }
@@ -122,7 +122,7 @@ button.btn-secondary {
     height: auto;
     border-radius: 5px;
     padding: 10px;
-    background-color: #5994ce;
+    background-color: #fff;
     margin-bottom: 10px;
     box-shadow: 0 0 10px 5px #38fbdb;
 }
@@ -148,7 +148,7 @@ button.btn-secondary {
 }
 
 progress[value]::-webkit-progress-value {background-color: #ff4cbf;}
-progress[value]::-webkit-progress-bar {background-color: #efefef;}
+progress[value]::-webkit-progress-bar {background-color: #dadada;}
 
 .bar {
     width: 100px; 
