--- a/views/student/pretest.ejs
+++ b/views/student/pretest.ejs
@@ -58,6 +58,7 @@
 <%# START %> 
 <form action="/pretestSubmit" method="post" autocomplete="off" >
     <%# button %> 
+    <!--
     <div class="btn-group me-2" role="group" aria-label="Basic outlined example">
         <button type="button"  data-bs-toggle="collapse" aria-expanded="false" aria-controls="flush-collapseOne" 
         class="btn btn-secondary collapsed" data-bs-target="#test1" >1</button>      
@@ -90,7 +91,7 @@
         <button type="button"  data-bs-toggle="collapse" aria-expanded="false" aria-controls="flush-collapseOne" 
         class="btn btn-secondary collapsed" data-bs-target="#test10">14</button>
         <button type="button"  data-bs-toggle="collapse" aria-expanded="false" aria-controls="flush-collapseOne" 
-        class="btn btn-secondary collapsed" data-bs-target="#test10">15</button>
+        class="btn btn-secondary collapsed" data-bs-target="#test10">15</button>-->
         <button type="submit" class="btn btn-outline-dark">ข้าม</button>
     </div>
         
@@ -105,38 +106,14 @@
         class="btn btn-secondary collapsed" data-bs-target="#test1" >แนะนำการใข้งาน</button>  
         <button type="submit" class="btn btn-outline-dark">ข้าม</button>
     </div>
-
+<!--
 <%# test1 %>
 <br>
     <div id="test1" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionMain">
-        <div class="item1" style="border-radius: 5px;">
-                    <b>คลิกเพื่อเข้าร่วม Class</b><br>
-                    <p type="" class="button" >
-                        <svg width="17.5" height="20" style="font-size: 20px;;align-items: center;" viewBox="0 0 448 512">
-                        <path d="M432 256c0 17.69-14.33 32.01-32 32.01H256v144c0 17.69-14.33 31.99-32 31.99s-32-14.3-32-31.99v-144H48c-17.67 0-32-14.32-32-32.01s14.33-31.99 32-31.99H192v-144c0-17.69 14.33-32.01 32-32.01s32 14.32 32 32.01v144h144C417.7 224 432 238.3 432 256z"/>
-                        </svg><b> Join Class</b>
-                    </p>
-        </div>  <br>
-        <p>รับโค้ดจากอาจารย์ผู้สอน และคลิก Join Class</p>
-        <button type="button"  data-bs-toggle="collapse" aria-expanded="false" aria-controls="flush-collapseOne" 
-        class="btn btn-secondary collapsed" data-bs-target="#test2" >Next</button>
     </div>
     
 <%# test2 %>
         <div id="test2" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionMain">
-            <div class="item1" style="width: auto;">
-                <svg height="20" width="20" viewBox="0 0 512 512">
-                    <path d="M505.2 324.8l-47.73-68.78l47.75-68.81c7.359-10.62 8.797-24.12 3.844-36.06c-4.969-11.94-15.52-20.44-28.22-22.72l-82.39-14.88l-14.89-82.41c-2.281-12.72-10.76-23.25-22.69-28.22c-11.97-4.936-25.42-3.498-36.12 3.844L256 54.49L187.2 6.709C176.5-.6016 163.1-2.039 151.1 2.896c-11.92 4.971-20.4 15.5-22.7 28.19l-14.89 82.44L31.15 128.4C18.42 130.7 7.854 139.2 2.9 151.2C-2.051 163.1-.5996 176.6 6.775 187.2l47.73 68.78l-47.75 68.81c-7.359 10.62-8.795 24.12-3.844 36.06c4.969 11.94 15.52 20.44 28.22 22.72l82.39 14.88l14.89 82.41c2.297 12.72 10.78 23.25 22.7 28.22c11.95 4.906 25.44 3.531 36.09-3.844L256 457.5l68.83 47.78C331.3 509.7 338.8 512 346.3 512c4.906 0 9.859-.9687 14.56-2.906c11.92-4.969 20.4-15.5 22.7-28.19l14.89-82.44l82.37-14.88c12.73-2.281 23.3-10.78 28.25-22.75C514.1 348.9 512.6 335.4 505.2 324.8zM456.8 339.2l-99.61 18l-18 99.63L256 399.1L172.8 456.8l-18-99.63l-99.61-18L112.9 255.1L55.23 172.8l99.61-18l18-99.63L256 112.9l83.15-57.75l18.02 99.66l99.61 18L399.1 255.1L456.8 339.2zM256 143.1c-61.85 0-111.1 50.14-111.1 111.1c0 61.85 50.15 111.1 111.1 111.1s111.1-50.14 111.1-111.1C367.1 194.1 317.8 143.1 256 143.1zM256 319.1c-35.28 0-63.99-28.71-63.99-63.99S220.7 192 256 192s63.99 28.71 63.99 63.1S291.3 319.1 256 319.1z"/>
-                </svg><b> Recommend</b>
-                <div class="button">
-                    <svg height="20" width="20" viewBox="0 0 512 512">
-                        <path d="M349.565 98.783C295.978 98.783 251.721 64 184.348 64c-24.955 0-47.309 4.384-68.045 12.013a55.947 55.947 0 0 0 3.586-23.562C118.117 24.015 94.806 1.206 66.338.048 34.345-1.254 8 24.296 8 56c0 19.026 9.497 35.825 24 45.945V488c0 13.255 10.745 24 24 24h16c13.255 0 24-10.745 24-24v-94.4c28.311-12.064 63.582-22.122 114.435-22.122 53.588 0 97.844 34.783 165.217 34.783 48.169 0 86.667-16.294 122.505-40.858C506.84 359.452 512 349.571 512 339.045v-243.1c0-23.393-24.269-38.87-45.485-29.016-34.338 15.948-76.454 31.854-116.95 31.854z"/></svg>
-                        <b> Choose</b>
-                    </div>
-            </div> <br>
-            <p>คลิก Choose เพื่อเลือกเส้นทางการแนะนำบทเรียน</p>
-            <button type="button"  data-bs-toggle="collapse" aria-expanded="false" aria-controls="flush-collapseOne" 
-            class="btn btn-secondary collapsed" data-bs-target="#test3" >Next</button>
         </div>	
         
     </div>
@@ -172,7 +149,7 @@
     <div id="test10" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionMain">
 
     </div>
-
+-->
 
 
 <%#  END %> 
